input type="Color" color-picker does not appear, when you activate the button using 'accesskey' (with "<input> picker was blocked due to lack of user activation")
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox105 | --- | fixed |
People
(Reporter: dholbert, Assigned: emilio)
References
Details
Attachments
(2 files, 1 obsolete file)
STR:
- Have devtools open (before you load the testcase)
- Load the testcase.
- Alt-Shift+C to activate the input-color-widget via keyboard accesskey (it has
accesskey='c'
)
ACTUAL RESULTS:
- console shows that we fired the onclick handler
- However, the input color-picker dialog does not appear, and instead we show this warning in the devtools console:
<input> picker was blocked due to lack of user activation.
EXPECTED RESULTS:
The color picker dialog should show up (rather than the warning about lack of user activation). The accesskey here is a method of user activation.
Note: if you click an arbitrary spot on the page before entering the accesskey-key-command, then you get EXPECTED RESULTS. (We interpret that click as a user activation, and that classification seems to extend long enough to envelope the accesskey action as well.)
Reporter | ||
Comment 1•2 years ago
|
||
I get ACTUAL RESULTS in Nightly on Linux.
I get EXPECTED RESULTS in Nightly on macOS.
Haven't tested Windows yet.
Reporter | ||
Comment 2•2 years ago
|
||
If I set about:config
pref to dom.disable_open_during_load
, then I get EXPECTED RESULTS on Linux.
Testing with Nightly 105.0a1 (2022-07-30) (64-bit).
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 3•2 years ago
|
||
Updated•2 years ago
|
Assignee | ||
Comment 4•2 years ago
|
||
By not propagating to the inner button. This probably broke with
bug 505355 since it made the button not focusable.
Depends on D153309
Comment 5•2 years ago
|
||
Comment on attachment 9287869 [details]
Bug 1782380 - Fix accesskey on file input. r=edgar,smaug
Revision D153321 was moved to bug 1780199. Setting attachment 9287869 [details] to obsolete.
Comment 7•2 years ago
|
||
bugherder |
Description
•