Bug 1782380 - Consider trusted accesskey event user activation. r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D153309