dom/html/HTMLLabelElement.cpp
@@ -193,6 +193,7 @@ Result<bool, nsresult> HTMLLabelElement::PerformAccesskey(
   }
 
   // Click on it if the users prefs indicate to do so.
+  AutoHandlingUserInputStatePusher userInputStatePusher(aIsTrustedEvent);
   AutoPopupStatePusher popupStatePusher(
       aIsTrustedEvent ? PopupBlocker::openAllowed : PopupBlocker::openAbused);
   DispatchSimulatedClick(this, aIsTrustedEvent, presContext);
